<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>p9n_interface_2024</name>
  <version>0.0.0</version>
  <description>Controller in Rust</description>
  <maintainer email="sarukiti1891@gmail.com">sarukiti</maintainer>
  <license>Apache License 2.0</license>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <depend>drobo_interfaces</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
